--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		OG REPOSITORY
 	</title>
 </head>
-<link type/text="css" href="main.css">
+<link rel="stylesheet" href="main.css">
 <body>
 	<p>This is how to create a repository locally and push to github</p>
 </body>
